Prevent bleeding over SVG cover

--- a/_sass/components/_intro-image.scss
+++ b/_sass/components/_intro-image.scss
@@ -1,5 +1,5 @@
 .intro-image {
-  width: 100%;
+  width: 97%;
   height: auto;
 }
 .intro-image-absolute {
